--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,15 @@
 language: php
+
 php:
-  - 7.1.9
-  - 7.2.0
+  - 7.1
+  - 7.2
   - hhvm # on Trusty only
   - nightly
-install: composer install
+
+before_script:
+  - wget -O vendor/bin/phpunit-5.7 https://phar.phpunit.de/phpunit-5.7.phar
+
+install: travis_retry composer install
+
+notifications:
+  email: falsec
