--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: php
 php:
-  - 7.1.9
-  - 7.2.0
+  - 7.1
+  - 7.2
   - hhvm # on Trusty only
   - nightly
 install: composer install
+notifications:
+  email: false
