--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ php:
   - nightly
 
 before_script:
-  - wget -O vendor/bin/phpunit-5.7 https://phar.phpunit.de/phpunit-5.7.phar
+  - if [[ $TRAVIS_PHP_VERSION == 'hhvm' ]]; then wget -O vendor/bin/phpunit https://phar.phpunit.de/phpunit-5.7.phar; fi
 
 install: travis_retry composer install
 
