--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ php:
   - nightly
 
 before_script:
-  - if [[ $TRAVIS_PHP_VERSION == 'hhvm' ]]; then wget -O vendor/bin/phpunit https://phar.phpunit.de/phpunit-5.7.phar; fi
+  - if [[ $TRAVIS_PHP_VERSION == 'hhvm' ]]; then curl -sSfL -o ~/.phpenv/versions/hhvm/bin/phpunit https://phar.phpunit.de/phpunit-5.7.phar
+; fi
 
 install: travis_retry composer install
 
