--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,15 @@ language: php
 php:
   - 7.1
   - 7.2
-  - hhvm # on Trusty only
+  - hhvm
   - nightly
 
 before_script:
-  - if [[ $TRAVIS_PHP_VERSION == 'hhvm' ]]; then curl -sSfL -o ~/.phpenv/versions/hhvm/bin/phpunit https://phar.phpunit.de/phpunit-5.7.phar; fi
+  - if [[ $TRAVIS_PHP_VERSION == 'hhvm' ]]; then curl -SL -o ~/.phpenv/versions/hhvm/bin/phpunit https://phar.phpunit.de/phpunit-5.7.phar; fi
 
 install: travis_retry composer install
 
+script: if [[ $TRAVIS_PHP_VERSION == 'hhvm' ]]; then ~/.phpenv/versions/hhvm/bin/phpunit; else $COMPOSER_BIN_DIR/phpunit; fi
+
 notifications:
-  email: falsec
+  email: false
