--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,10 @@ php:
   - hhvm
   - nightly
 
-before_script:
-  - if [[ $TRAVIS_PHP_VERSION == 'hhvm' ]]; then curl -SL -o ~/.phpenv/versions/hhvm/bin/phpunit https://phar.phpunit.de/phpunit-5.7.phar; fi
+#before_script:
+#  - if [[ $TRAVIS_PHP_VERSION == 'hhvm' ]]; then curl -SL -o ~/.phpenv/versions/hhvm/bin/phpunit https://phar.phpunit.de/phpunit-5.7.phar; fi
 
 install: travis_retry composer install
-
-script: if [[ $TRAVIS_PHP_VERSION == 'hhvm' ]]; then ~/.phpenv/versions/hhvm/bin/phpunit; else $COMPOSER_BIN_DIR/phpunit; fi
 
 notifications:
   email: false
