--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "psr/http-message": "~1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^7"
+    "phpunit/phpunit": "~5.7"
   },
   "autoload": {
     "psr-4": {
