--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,13 @@ php:
 #before_script:
 #  - if [[ $TRAVIS_PHP_VERSION == 'hhvm' ]]; then curl -SL -o ~/.phpenv/versions/hhvm/bin/phpunit https://phar.phpunit.de/phpunit-5.7.phar; fi
 
-install: travis_retry composer install
+install: travis_retry composer install --dev
 
 notifications:
   email: false
+
+script:
+  - vendor/bin/phpunit --coverage-clover=coverage.xml
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
